Fixed bug that showed collapsed navbar on load + added transition on hamburger click and window resize

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -89,7 +89,6 @@
     margin-inline: 20px;
   }
 }
-
 .mobileLinks {
   display: flex;
   position: absolute;
@@ -108,8 +107,8 @@
 
 .mobileLink {
   display: flex;
-  padding: 20px;
-  padding-inline: 40px;
+  padding: 30px;
+  padding-inline: 80px;
   color: $neutralColor;
   border-radius: 5px;
   transition: 0.1s color;
@@ -117,9 +116,17 @@
 
 .mobileLink:hover {
   color: white;
-  background-color: $collapsedHoverBackground;
 }
 
-.hidden {
-  display: none;
+.fadeIn {
+  display: flex;
+  opacity: 0;
+  opacity: 1;
+  transition: 0.5s all;
+}
+
+.fadeOut {
+  opacity: 0;
+  transition: 0.5s all;
+  pointer-events: none;
 }
